--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,11 +2,10 @@ trigger:
 - '*'
 
 pool:
-  vmImage: 'ubuntu-16.04'
+  name: 'MyAgentPool'
   demands:
-    - npm
+  - npm
 
-variables:
   buildConfiguration: 'Release'
   wwwrootDir: 'Tailspin.SpaceGame.Web/wwwroot'
   dotnetSdkVersion: '3.1.100'
